--- a/events/leiria-run.html
+++ b/events/leiria-run.html
@@ -61,6 +61,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "10ª edição do Leiria Run by Tiago Batista",
+  "url": "/events/leiria-run.html"
+}
+</script>
+
 </head>
 
 <body>
