--- a/events/nascente-rio-liz.html
+++ b/events/nascente-rio-liz.html
@@ -59,6 +59,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "Nascente do Rio Liz by Tiago Batista",
+  "url": "/events/nascente-rio-liz.html"
+}
+</script>
+
 </head>
 
 <body>
