--- a/events/tomar.html
+++ b/events/tomar.html
@@ -61,6 +61,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "Tomar by Tiago Batista",
+  "url": "/events/tomar.html"
+}
+</script>
+
 </head>
 
 <body>
