--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -59,6 +59,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "The World of Hans Zimmer by Tiago Batista",
+  "url": "/events/world-of-hans-zimmer.html"
+}
+</script>
+
 </head>
 
 <body>
