--- a/events/zoo-lisboa.html
+++ b/events/zoo-lisboa.html
@@ -65,6 +65,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "Jardim Zoológico - Lisboa by Tiago Batista",
+  "url": "/events/zoo-lisboa.html"
+}
+</script>
+
 </head>
 
 <body>
