--- a/events/50-anos-25abril-leiria.html
+++ b/events/50-anos-25abril-leiria.html
@@ -59,6 +59,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "50 Anos 25 Abril - Leiria by Tiago Batista",
+  "url": "/events/50-anos-25abril-leiria.html"
+}
+</script>
+
 </head>
 
 <body>
