--- a/events/7-chicharo.html
+++ b/events/7-chicharo.html
@@ -61,6 +61,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "7º Trail do Chícharo da Serra by Tiago Batista",
+  "url": "/events/7-chicharo.html"
+}
+</script>
+
 </head>
 
 <body>
