--- a/events/beja.html
+++ b/events/beja.html
@@ -59,6 +59,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "Beja by Tiago Batista",
+  "url": "/events/beja.html"
+}
+</script>
+
 </head>
 
 <body>
