--- a/events/carochas.html
+++ b/events/carochas.html
@@ -61,6 +61,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Event",
+  "name": "Carocha Fest - 90 Anos by Tiago Batista",
+  "url": "/events/carochas.html"
+}
+</script>
+
 </head>
 
 <body>
