fined tuned some SEO

--- a/events/11-trail-barreira.html
+++ b/events/11-trail-barreira.html
@@ -64,9 +64,26 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "11º Trail Off-Road da Barreira by Tiago Batista",
-  "url": "/events/11-trail-barreira.html"
+  "headline": "11º Trail Off-Road da Barreira - Fevereiro - 2025",
+  "url": "/events/11-trail-barreira.html",
+  "keywords": [
+    "Trail",
+    "Barreira",
+    "correr",
+    "desporto",
+    "competicao",
+    "equipa",
+    "offroad",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
