--- a/events/11-trail-fatima.html
+++ b/events/11-trail-fatima.html
@@ -62,9 +62,25 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "11º Trail de Fátima by Tiago Batista",
-  "url": "/events/11-trail-fatima.html"
+  "headline": "11º Trail de Fátima - Outubro - 2024",
+  "url": "/events/11-trail-fatima.html",
+  "keywords": [
+    "Trail",
+    "Fátima",
+    "correr",
+    "desporto",
+    "competicao",
+    "equipa",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
