--- a/events/3-horas-resistencia-loureira.html
+++ b/events/3-horas-resistencia-loureira.html
@@ -64,9 +64,32 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "3 Horas Resistência Loureira 2025 by Tiago Batista",
-  "url": "/events/3-horas-resistencia-loureira.html"
+  "@type": "CreativeWork",
+  "name": "3 Horas Resistência Loureira by Tiago Batista",
+  "headline": "3 Horas Resistência Loureira 2025 - Julho - 2025",
+  "url": "/events/3-horas-resistencia-loureira.html",
+  "keywords": [
+    "fotografia",
+    "loureira",
+    "resistência",
+    "2025",
+    "eventos",
+    "rally",
+    "cars",
+    "rallye",
+    "carros",
+    "lama",
+    "mud",
+    "competition",
+    "endurance",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
