--- a/events/50-anos-25abril-leiria.html
+++ b/events/50-anos-25abril-leiria.html
@@ -62,9 +62,24 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "50 Anos 25 Abril - Leiria by Tiago Batista",
-  "url": "/events/50-anos-25abril-leiria.html"
+  "@type": "CreativeWork",
+  "name": "50 Anos 25 Abril by Tiago Batista",
+  "headline": "50 Anos 25 Abril em Leiria",
+  "url": "/events/50-anos-25abril-leiria.html",
+  "keywords": [
+    "50 anos",
+    "25 abril",
+    "leiria",
+    "cinquentenario",
+    "revolucao",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
