--- a/events/7-chicharo.html
+++ b/events/7-chicharo.html
@@ -64,9 +64,28 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "7º Trail do Chícharo da Serra by Tiago Batista",
-  "url": "/events/7-chicharo.html"
+  "headline": "7º Trail do Chícharo da Serra - Novembro - 2024",
+  "url": "/events/7-chicharo.html",
+  "keywords": [
+    "Trail",
+    "Fátima",
+    "correr",
+    "desporto",
+    "competicao",
+    "equipa",
+    "chicharo",
+    "chicharo da serra",
+    "santa catarina da serra",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
