--- a/events/aporta.html
+++ b/events/aporta.html
@@ -64,9 +64,24 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "A Porta - Photowalk by Tiago Batista",
-  "url": "/events/aporta.html"
+  "@type": "CreativeWork",
+  "name": "A Porta by Tiago Batista",
+  "headline": "10ª edição d'A Porta",
+  "url": "/events/aporta.html",
+  "keywords": [
+    "a porta",
+    "porta",
+    "leiria",
+    "fotografia",
+    "photowalk",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
