--- a/events/beja.html
+++ b/events/beja.html
@@ -62,9 +62,20 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Beja by Tiago Batista",
-  "url": "/events/beja.html"
+  "headline": "Beja",
+  "url": "/events/beja.html",
+  "keywords": [
+    "Beja",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
