--- a/events/corrida-adepto.html
+++ b/events/corrida-adepto.html
@@ -62,9 +62,21 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Corrida Adepto by Tiago Batista",
-  "url": "/events/corrida-adepto.html"
+  "headline": "Corrida Adepto, Leiria",
+  "url": "/events/corrida-adepto.html",
+  "keywords": [
+    "Corrida Adepto",
+    "Corrida",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
