--- a/events/festa-das-rosas.html
+++ b/events/festa-das-rosas.html
@@ -62,9 +62,22 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Festa das Rosas - Vila Franca by Tiago Batista",
-  "url": "/events/festa-das-rosas.html"
+  "@type": "CreativeWork",
+  "name": "Festa das Rosas by Tiago Batista",
+  "headline": "Festa das Rosas, Vila Franca",
+  "url": "/events/festa-das-rosas.html",
+  "keywords": [
+    "Festa das Rosas",
+    "Vila Franca",
+    "Vila Franca do Lima",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
