--- a/events/fna.html
+++ b/events/fna.html
@@ -64,9 +64,30 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Feira Nacional da Agricultura by Tiago Batista",
-  "url": "/events/fna.html"
+  "headline": "Feira Nacional da Agricultura - Junho - 2025",
+  "url": "/events/fna.html",
+  "keywords": [
+    "animais",
+    "quinta",
+    "cavalos",
+    "ovelhas",
+    "bois",
+    "vacas",
+    "feira",
+    "feira nacional Agricultura",
+    "ribatejo",
+    "santarem",
+    "feira do ribatejo",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
