--- a/events/fnac-maratonas.html
+++ b/events/fnac-maratonas.html
@@ -62,9 +62,26 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Maratonas Fotográficas FNAC by Tiago Batista",
-  "url": "/events/fnac-maratonas.html"
+  "headline": "Maratonas Fotográficas FNAC - Junho - 2025",
+  "url": "/events/fnac-maratonas.html",
+  "keywords": [
+    "fotografia",
+    "torres novas",
+    "vila nova da barquinha",
+    "barquinha",
+    "fotos",
+    "concurso",
+    "fnac",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
