--- a/events/index.html
+++ b/events/index.html
@@ -69,7 +69,7 @@
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Events — Index",
   "description": "Index of events with links and machine-readable JSON-LD to help crawlers discover event pages.",
   "url": "/events/index.html"
