--- a/events/la-vuelta.html
+++ b/events/la-vuelta.html
@@ -62,9 +62,25 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "La Vuelta - Fátima by Tiago Batista",
-  "url": "/events/la-vuelta.html"
+  "@type": "CreativeWork",
+  "name": "La vuelta by Tiago Batista",
+  "headline": "La Vuelta, Fátima",
+  "url": "/events/la-vuelta.html",
+  "keywords": [
+    "Fátima",
+    "La Vuelta",
+    "Vuelta",
+    "Volta a Espanha",
+    "Espanha",
+    "Volta",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
