--- a/events/leiria-medieval-2025.html
+++ b/events/leiria-medieval-2025.html
@@ -62,9 +62,27 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Leiria Medieval 2025 by Tiago Batista",
-  "url": "/events/leiria-medieval-2025.html"
+  "headline": "Leiria Medieval 2025 - Julho - 2025",
+  "url": "/events/leiria-medieval-2025.html",
+  "keywords": [
+    "fotografia",
+    "leiria",
+    "medieval",
+    "2025",
+    "eventos",
+    "antigo",
+    "cavalos",
+    "jousting",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
