--- a/events/leiria-medieval.html
+++ b/events/leiria-medieval.html
@@ -62,9 +62,23 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Feira Medieval - Leiria by Tiago Batista",
-  "url": "/events/leiria-medieval.html"
+  "@type": "CreativeWork",
+  "name": "Leiria Medieval by Tiago Batista",
+  "headline": "Leiria, Feira Medieval",
+  "url": "/events/leiria-medieval.html",
+  "keywords": [
+    "Leiria",
+    "Medieval",
+    "Feira",
+    "Feira Medieval",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
