--- a/events/leiria-run.html
+++ b/events/leiria-run.html
@@ -64,9 +64,31 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "10ª edição do Leiria Run by Tiago Batista",
-  "url": "/events/leiria-run.html"
+  "headline": "10ª edição do Leiria Run - Maio - 2025",
+  "url": "/events/leiria-run.html",
+  "keywords": [
+    "correr",
+    "desporto",
+    "competicao",
+    "equipa",
+    "estrada",
+    "meia maratona",
+    "corrida",
+    "fatima",
+    "fátima",
+    "vencer",
+    "winning",
+    "trail",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
