--- a/events/leiria-sobre-rodas-24.html
+++ b/events/leiria-sobre-rodas-24.html
@@ -62,9 +62,29 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Leiria sobre rodas by Tiago Batista",
-  "url": "/events/leiria-sobre-rodas-24.html"
+  "@type": "CreativeWork",
+  "name": "Leiria sobre rodas 2024 by Tiago Batista",
+  "headline": "Leiria sobre rodas - Leiria - 2024",
+  "url": "/events/leiria-sobre-rodas-24.html",
+  "keywords": [
+    "rodas",
+    "leira",
+    "leiria sobre rodas",
+    "carros",
+    "rally",
+    "tunning",
+    "jantes",
+    "competição",
+    "competition",
+    "stage",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
