--- a/events/magusto-pias-longas.html
+++ b/events/magusto-pias-longas.html
@@ -62,9 +62,26 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Pias Longas - Magusto by Tiago Batista",
-  "url": "/events/magusto-pias-longas.html"
+  "@type": "CreativeWork",
+  "name": "Magusta, Pias Longas by Tiago Batista",
+  "headline": "Magusta, Pias Longas - Outubro - 2024",
+  "url": "/events/magusto-pias-longas.html",
+  "keywords": [
+    "magusto",
+    "castanhas",
+    "pias longas",
+    "aviao",
+    "avioneta",
+    "aviacao",
+    "batismo voo",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
