--- a/events/meia-maratona-fatima.html
+++ b/events/meia-maratona-fatima.html
@@ -64,9 +64,30 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Meia Maratona Fátima by Tiago Batista",
-  "url": "/events/meia-maratona-fatima.html"
+  "@type": "CreativeWork",
+  "name": "Primeira Meia Maratona Fátima by Tiago Batista",
+  "headline": "Primeira Meia Maratona Fátima - Março - 2025",
+  "url": "/events/meia-maratona-fatima.html",
+  "keywords": [
+    "correr",
+    "desporto",
+    "competicao",
+    "equipa",
+    "estrada",
+    "meia maratona",
+    "corrida",
+    "fatima",
+    "fátima",
+    "vencer",
+    "winning",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
