--- a/events/meia-maratona.html
+++ b/events/meia-maratona.html
@@ -62,9 +62,22 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Meia Maratona by Tiago Batista",
-  "url": "/events/meia-maratona.html"
+  "@type": "CreativeWork",
+  "name": "Meia Maratona Leiria by Tiago Batista",
+  "headline": "Meia Maratona, Leira",
+  "url": "/events/meia-maratona.html",
+  "keywords": [
+    "Maratona",
+    "Meia Maratona",
+    "Leiria",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
