--- a/events/nascente-rio-liz.html
+++ b/events/nascente-rio-liz.html
@@ -62,9 +62,23 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Nascente do Rio Liz by Tiago Batista",
-  "url": "/events/nascente-rio-liz.html"
+  "@type": "CreativeWork",
+  "name": "Nascente do Rio Lis by Tiago Batista",
+  "headline": "Nascente do Rio Lis",
+  "url": "/events/nascente-rio-liz.html",
+  "keywords": [
+    "Nascente",
+    "Rio",
+    "Lis",
+    "Rio Lis",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
