--- a/events/obidos-vila-natal.html
+++ b/events/obidos-vila-natal.html
@@ -64,9 +64,27 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Óbidos Vila Natal by Tiago Batista",
-  "url": "/events/obidos-vila-natal.html"
+  "headline": "Óbidos Vila Natal - Dezembro - 2024",
+  "url": "/events/obidos-vila-natal.html",
+  "keywords": [
+    "natal",
+    "obidos",
+    "castelo",
+    "castle",
+    "christmas",
+    "xmas",
+    "lights",
+    "iluminaçao",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
