--- a/events/ocr-leiria-2025.html
+++ b/events/ocr-leiria-2025.html
@@ -64,9 +64,36 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "6ª edição da OCR Police Challenge by Tiago Batista",
-  "url": "/events/ocr-leiria-2025.html"
+  "headline": "6ª edição da OCR Police Challenge - Julho - 2025",
+  "url": "/events/ocr-leiria-2025.html",
+  "keywords": [
+    "OCR",
+    "OCR Leiria",
+    "OCR Police Challenge",
+    "OCR Portugal",
+    "OCR 2025",
+    "OCR Leiria 2025",
+    "OCR Challenge",
+    "OCR Leiria Challenge",
+    "OCR Police",
+    "OCR Police Challenge 2025",
+    "OCR Leiria 2025 Challenge",
+    "sports",
+    "team sports",
+    "obstacle course racing",
+    "OCR events",
+    "OCR competition",
+    "OCR Leiria 2025 event",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
