--- a/events/ocr-police-challenge-leiria.html
+++ b/events/ocr-police-challenge-leiria.html
@@ -62,9 +62,21 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "OCR Police Challenge - Leiria by Tiago Batista",
-  "url": "/events/ocr-police-challenge-leiria.html"
+  "@type": "CreativeWork",
+  "name": "OCR Police Challenge Leiria by Tiago Batista",
+  "headline": "OCR Police Challenge, Leiria",
+  "url": "/events/ocr-police-challenge-leiria.html",
+  "keywords": [
+    "OCR Police Challenge",
+    "leiria",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
