--- a/events/patinaliz.html
+++ b/events/patinaliz.html
@@ -64,9 +64,27 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "I Festival Patinaliz by Tiago Batista",
-  "url": "/events/patinaliz.html"
+  "headline": "I Festival Patinaliz - Dezembro - 2024",
+  "url": "/events/patinaliz.html",
+  "keywords": [
+    "patinagem",
+    "patinaliz",
+    "leiria",
+    "patins",
+    "filme",
+    "movies",
+    "rollerskating",
+    "rollerskate",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
