--- a/events/pombal.html
+++ b/events/pombal.html
@@ -64,9 +64,25 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Pombal by Tiago Batista",
-  "url": "/events/pombal.html"
+  "headline": "Pombal - Maio - 2025",
+  "url": "/events/pombal.html",
+  "keywords": [
+    "Pombal",
+    "mercado barroco",
+    "barroco",
+    "museu",
+    "leiria. castelo",
+    "castelo pombal",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
