--- a/events/pumptrack.html
+++ b/events/pumptrack.html
@@ -64,9 +64,34 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Pump Track World Championships Qualifier by Tiago Batista",
-  "url": "/events/pumptrack.html"
+  "@type": "CreativeWork",
+  "name": "Pump Track World Championships Qualifier Loureira by Tiago Batista",
+  "headline": "Pump Track World Championships Qualifier Loureira - Julho - 2025",
+  "url": "/events/pumptrack.html",
+  "keywords": [
+    "pump track",
+    "world championships",
+    "qualifier",
+    "fotografia",
+    "evento",
+    "riders",
+    "competition",
+    "bike",
+    "cycling",
+    "sports",
+    "velosolutions",
+    "loureira",
+    "portugal",
+    "bmx",
+    "mountain bike",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
