--- a/events/rally-auren.html
+++ b/events/rally-auren.html
@@ -64,9 +64,28 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Rally Terras Auren by Tiago Batista",
-  "url": "/events/rally-auren.html"
+  "headline": "Rally Terras Auren - Abril - 2025",
+  "url": "/events/rally-auren.html",
+  "keywords": [
+    "carros",
+    "rally",
+    "competição",
+    "competition",
+    "stage",
+    "rallye",
+    "auren",
+    "fatima",
+    "auren",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
