--- a/events/rampa-reg-fetal.html
+++ b/events/rampa-reg-fetal.html
@@ -64,9 +64,27 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Rampa do Reguengo do Fetal by Tiago Batista",
-  "url": "/events/rampa-reg-fetal.html"
+  "headline": "Rampa do Reguengo do Fetal - Abril - 2025",
+  "url": "/events/rampa-reg-fetal.html",
+  "keywords": [
+    "carros",
+    "rally",
+    "competição",
+    "competition",
+    "stage",
+    "rallye",
+    "auren",
+    "batalha",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
