--- a/events/rolamentos.html
+++ b/events/rolamentos.html
@@ -64,9 +64,21 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "23ª Rodas D'Aço by Tiago Batista",
-  "url": "/events/rolamentos.html"
+  "@type": "CreativeWork",
+  "name": "23ª Rodas D'Aço Golpilheira by Tiago Batista",
+  "headline": "23ª Rodas D'Aço Golpilheira - Julho - 2025",
+  "url": "/events/rolamentos.html",
+  "keywords": [
+    "carros de rolamentos",
+    "eventos de rolametos",
+    "23ª Rodas D'Aço"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
