--- a/events/serra-estrela.html
+++ b/events/serra-estrela.html
@@ -62,9 +62,20 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Serra Estrela by Tiago Batista",
-  "url": "/events/serra-estrela.html"
+  "headline": "Serra Estrela",
+  "url": "/events/serra-estrela.html",
+  "keywords": [
+    "Serra Estrela",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
