--- a/events/tomar.html
+++ b/events/tomar.html
@@ -64,9 +64,28 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Tomar by Tiago Batista",
-  "url": "/events/tomar.html"
+  "headline": "Tomar - Março - 2025",
+  "url": "/events/tomar.html",
+  "keywords": [
+    "tomar",
+    "passeio",
+    "cidade",
+    "templario",
+    "fosforo",
+    "museu do fosforo",
+    "colecao",
+    "collection",
+    "matches",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
