--- a/events/trilhos-pastor.html
+++ b/events/trilhos-pastor.html
@@ -62,9 +62,25 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "15ª edição dos Trilhos do Pastor by Tiago Batista",
-  "url": "/events/trilhos-pastor.html"
+  "headline": "15ª edição dos Trilhos do Pastor - Abril - 2025",
+  "url": "/events/trilhos-pastor.html",
+  "keywords": [
+    "Trail",
+    "Batalha",
+    "correr",
+    "desporto",
+    "competicao",
+    "equipa",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
