--- a/events/valencia.html
+++ b/events/valencia.html
@@ -62,9 +62,31 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Valência by Tiago Batista",
-  "url": "/events/valencia.html"
+  "headline": "Valência - Setembro - 2025",
+  "url": "/events/valencia.html",
+  "keywords": [
+    "fotografia",
+    "espanha",
+    "valencia",
+    "street photography",
+    "street market",
+    "big city",
+    "city life",
+    "holiday",
+    "cars",
+    "gumball 3000",
+    "gumball",
+    "supercar",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
