--- a/events/vespas-fatima-24.html
+++ b/events/vespas-fatima-24.html
@@ -62,9 +62,30 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "18ª Concentração Vespinga - Fátima by Tiago Batista",
-  "url": "/events/vespas-fatima-24.html"
+  "@type": "CreativeWork",
+  "name": "18ª Concentração Vespinga by Tiago Batista",
+  "headline": "Fátima, 18ª Concentração Vespinga",
+  "url": "/events/vespas-fatima-24.html",
+  "keywords": [
+    "Fátima",
+    "concentração vespinga",
+    "vespinga",
+    "vespas",
+    "motos",
+    "concentração",
+    "concentracao",
+    "vespa",
+    "vespa clube de fátima",
+    "portugal",
+    "benção",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
