--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -62,9 +62,22 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "The World of Hans Zimmer by Tiago Batista",
-  "url": "/events/world-of-hans-zimmer.html"
+  "headline": "The World of Hans Zimmer",
+  "url": "/events/world-of-hans-zimmer.html",
+  "keywords": [
+    "The World of Hans Zimmer",
+    "Hans",
+    "Zimmer",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
