--- a/events/zoo-lisboa.html
+++ b/events/zoo-lisboa.html
@@ -68,9 +68,72 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Jardim Zoológico - Lisboa by Tiago Batista",
-  "url": "/events/zoo-lisboa.html"
+  "@type": "CreativeWork",
+  "name": "Zoo Lisboa by Tiago Batista",
+  "headline": "Lisboa, Jardim Zoológico",
+  "url": "/events/zoo-lisboa.html",
+  "keywords": [
+    "Lisboa",
+    "Jardim Zoológico",
+    "Zoo",
+    "Zoológico",
+    "animais",
+    "aves",
+    "savanah",
+    "lince",
+    "papagaio",
+    "zoological garden",
+    "zoological park",
+    "animal farm",
+    "menagerie",
+    "vivarium",
+    "wildlife park",
+    "aviary",
+    "reptile house",
+    "petting zoo",
+    "safari park",
+    "animal enclosure",
+    "wildlife sanctuary",
+    "aquarium",
+    "terrarium",
+    "penguin exhibit",
+    "panda enclosure",
+    "lion habitat",
+    "monkey island",
+    "giraffe enclosure",
+    "crocodile pond",
+    "kangaroo pen",
+    "bird aviary",
+    "snake house",
+    "tiger cage",
+    "elephant enclosure\r\n      hippopotamus pool",
+    "gorilla habitat",
+    "flamingo pond",
+    "zookeeper",
+    "animal keeper",
+    "conservation center",
+    "exotic animals",
+    "herpetarium",
+    "nocturnal house",
+    "primate exhibit",
+    "tropical rainforest",
+    "savannah area",
+    "penguin pool",
+    "animal shows",
+    "educational programs",
+    "animal behavior",
+    "feeding time",
+    "animal species",
+    "endangered animals",
+    "and animal enrichment",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
