--- a/events/bencao-capacetes.html
+++ b/events/bencao-capacetes.html
@@ -62,9 +62,29 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Bênção Capacetes - Fátima by Tiago Batista",
-  "url": "/events/bencao-capacetes.html"
+  "@type": "CreativeWork",
+  "name": "Bênção Capacetes, IX Peregrinação by Tiago Batista",
+  "headline": "Bênção Capacetes, IX Peregrinação",
+  "url": "/events/bencao-capacetes.html",
+  "keywords": [
+    "bênção capacetes",
+    "bênção",
+    "capacetes",
+    "peregrinação",
+    "fátima",
+    "fatima",
+    "motas",
+    "bikes",
+    "riding",
+    "touring",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
