--- a/events/carochas.html
+++ b/events/carochas.html
@@ -64,9 +64,30 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Carocha Fest - 90 Anos by Tiago Batista",
-  "url": "/events/carochas.html"
+  "@type": "CreativeWork",
+  "name": "90 Anos Carocha Fest by Tiago Batista",
+  "headline": "90 Anos Carocha Fest - Junho - 2025",
+  "url": "/events/carochas.html",
+  "keywords": [
+    "carocha",
+    "fest",
+    "90 anos",
+    "leiria",
+    "fotografia",
+    "evento",
+    "beetles",
+    "carros antigos",
+    "carros clássicos",
+    "carochas",
+    "volkswagen",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
