--- a/events/fatima-12-maio.html
+++ b/events/fatima-12-maio.html
@@ -62,9 +62,22 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Fátima 12 Maio by Tiago Batista",
-  "url": "/events/fatima-12-maio.html"
+  "@type": "CreativeWork",
+  "name": "12 Maio - Fátima by Tiago Batista",
+  "headline": "12 Maio - Fátima",
+  "url": "/events/fatima-12-maio.html",
+  "keywords": [
+    "Fátima",
+    "12 Maio",
+    "doze maio",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
