--- a/events/monte-real-24.html
+++ b/events/monte-real-24.html
@@ -62,9 +62,28 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
-  "name": "Base Aberta - Monte Real by Tiago Batista",
-  "url": "/events/monte-real-24.html"
+  "@type": "CreativeWork",
+  "name": "Monte Real, Base Aberta by Tiago Batista",
+  "headline": "Monte Real, Base Aberta",
+  "url": "/events/monte-real-24.html",
+  "keywords": [
+    "Monte real",
+    "leiria",
+    "base aberta",
+    "base aerea n 5",
+    "avioes",
+    "caças",
+    "engenharia",
+    "batistmos voo",
+    "voo",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
