--- a/events/pavilhao-conhecimento.html
+++ b/events/pavilhao-conhecimento.html
@@ -62,9 +62,28 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Pavilhão Conhecimento by Tiago Batista",
-  "url": "/events/pavilhao-conhecimento.html"
+  "headline": "Pavilhão Conhecimento - Lisboa - 2024",
+  "url": "/events/pavilhao-conhecimento.html",
+  "keywords": [
+    "Pavilhão Conhecimento",
+    "pavilhao conhecimento",
+    "lisboa",
+    "ciencia",
+    "ciencia viva",
+    "ciência",
+    "experiencias",
+    "pixar",
+    "acienciadapixar",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
