--- a/events/piodao-foz-degua.html
+++ b/events/piodao-foz-degua.html
@@ -62,9 +62,20 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Piodão e Foz D'Égua by Tiago Batista",
-  "url": "/events/piodao-foz-degua.html"
+  "headline": "Piodão e Foz D'Égua",
+  "url": "/events/piodao-foz-degua.html",
+  "keywords": [
+    "Piodão",
+    "Foz D'Égua"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
