--- a/events/sabugal.html
+++ b/events/sabugal.html
@@ -64,9 +64,28 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "Presépio Sabugal by Tiago Batista",
-  "url": "/events/sabugal.html"
+  "headline": "Presépio Sabugal  - Dezembro - 2024",
+  "url": "/events/sabugal.html",
+  "keywords": [
+    "natal",
+    "presepio",
+    "christmas",
+    "jesus",
+    "baby jesus",
+    "sabugal",
+    "sortelha",
+    "nativity",
+    "nativity scene",
+    "tiago batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
