--- a/events/trail-agroal.html
+++ b/events/trail-agroal.html
@@ -64,9 +64,28 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Event",
+  "@type": "CreativeWork",
   "name": "3ª edição Agroal Trail by Tiago Batista",
-  "url": "/events/trail-agroal.html"
+  "headline": "3ª edição Agroal Trail - Junho - 2025",
+  "url": "/events/trail-agroal.html",
+  "keywords": [
+    "correr",
+    "desporto",
+    "competicao",
+    "equipa",
+    "corrida",
+    "agroal",
+    "vencer",
+    "winning",
+    "trail",
+    "Tiago Batista"
+  ],
+  "creator": [
+    "Tiago Batista"
+  ],
+  "author": [
+    "Tiago Batista"
+  ]
 }
 </script>
 
