feira nacional cavalo

--- a/events/index.html
+++ b/events/index.html
@@ -85,6 +85,7 @@
 
     <main>
       <ul class="events">
+        <li><a class="link" href="/events/feira-nacional-cavalo.html">Feira Nacional do Cavalo, Golegã</a></li>
         <li><a class="link" href="/events/zoo-lisboa.html">Zoo Lisboa</a></li>
         <li><a class="link" href="/events/world-of-hans-zimmer.html">World Of Hans Zimmer</a></li>
         <li><a class="link" href="/events/vespas-fatima-24.html">Vespas Fatima 24</a></li>
