--- a/index.html
+++ b/index.html
@@ -356,6 +356,19 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/feira-nacional-cavalo/IMG_0199.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/feira-nacional-cavalo/IMG_0199.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Feira Nacional do Cavalo - Nov 9, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/feira-nacional-cavalo.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/3-horas-resistencia-loureira/IMG_0095.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/3-horas-resistencia-loureira/IMG_0095.jpg" data-gallery="portfolioGallery"
