xmas night trail

--- a/events/index.html
+++ b/events/index.html
@@ -56,6 +56,7 @@
         { "@type": "ListItem", "position": 42, "item": { "@type": "Event", "name": "3 Horas Resistencia Loureira", "url": "/events/3-horas-resistencia-loureira.html" } },
         { "@type": "ListItem", "position": 43, "item": { "@type": "Event", "name": "11 Trail Fatima", "url": "/events/11-trail-fatima.html" } },
         { "@type": "ListItem", "position": 44, "item": { "@type": "Event", "name": "11 Trail Barreira", "url": "/events/11-trail-barreira.html" } }
+        ,{ "@type": "ListItem", "position": 45, "item": { "@type": "Event", "name": "13º X-MAS NIGHT TRAIL", "url": "/events/xmas-night-trail.html" } }
       ]
     }
     </script>
@@ -130,6 +131,7 @@
         <li><a class="link" href="/events/3-horas-resistencia-loureira.html">3 Horas Resistencia Loureira</a></li>
         <li><a class="link" href="/events/11-trail-fatima.html">11 Trail Fatima</a></li>
         <li><a class="link" href="/events/11-trail-barreira.html">11 Trail Barreira</a></li>
+        <li><a class="link" href="/events/xmas-night-trail.html">13º X-MAS NIGHT TRAIL</a></li>
       </ul>
     </main>
 
